# raycraft

./: CMakeLists.txt  README.md  go.mod  go.sum  main-main.go  main-settings.go  main-textures.go  player-controls.go  player-movement.go  run.bat  world-data.go  world-main.go  world-mesh.go  world-render.go  world-structure.go
.github/: README.md
cpp-raycraft/: CMakeLists.txt  README.md
cpp-raycraft/lib/bullet3-3.25/examples/ExampleBrowser/: CMakeLists.txt
cpp-raycraft/lib/raylib-5.5/src/: rcamera.h
cpp-raycraft/src/: main.cpp
cpp-raycraft/src/player/: player.cpp
cpp-raycraft/src/world/: world.h
cpp-raycraft/src/world/chunk_model/: textures.h
cpp-raycraft/src/world/rbgen/: rbgen.cpp  rbgen.h
cpp-raycraft/src/worldgen/: worldgen.cpp  worldgen.h
go-raycraft/: README.md  debug-display.go  player-controls.go  player-interact.go  run.sh  world-collision.go  world-main.go  world-mesh.go
go-raycraft/Raygocraft-game/assets/: atlas.xcf
src/: camera.h  log.h  main.cpp  options.h
src/generator/: worldgen.cpp  worldgen.h
src/physics/: physics.cpp  physics.h
src/player/: physics.cpp  player.cpp  player.h
src/renderer/: chunk.cpp  chunk.h  textures.h  world.cpp  world.h
src/world/: chunk.cpp  chunk.h  world.cpp  world.h
src/world/chunk_model/: chunk_model.cpp  chunk_model.h
src/world/meshgen/: meshgen.cpp  meshgen.h  textures.h
src/world/rbgen/: rbgen.cpp
src/world/renderer/: renderer.cpp  renderer.h
src/world/worldgen/: worldgen.cpp
src/worldgen/: worldgen.cpp
